2010-09-xx:
    * version 0.7.9
    * Fix the tracked topic holding feature
    * Fix problems with stylesheets and other features not working correctly
      for some people
    * Fix problems with topic pagination, last post links and message numbering
    * Fix double headers appearing on the poll of the day
    * Add option to disable scrolling to QuickPost after quoting

2010-09-01:
    * version 0.7.8
    * Remove compatibility with Firefox 3.0
    * Fix QuickPost on Brilliant
    * Fix bug with topic and post matching highlighting groups
    * Update GFPastel 2010
    * Add compatibility with Firefox 4.0
    * Remove Board Settings from the options window
    * Add topic pages to context menu on message lists
    * New highlighting interface
    * Add ability to highlight all admins, mods, VIPs or tracked topics
    * Add the GameFAQs clock to QuickPost
    * Redesign toolbar icons
    * Move sidebar options to separate window (accessed from "configure
      sidebar" link at the bottom of the sidebar)
    * Fix custom date format in message detail
    * Notification for new posts in tracked topics
    * Fix topic list link on boards that contain "track" in the title
    * Move favorites menu to platform bar
    * Fix ad blocking with sponsored poll of the day

2010-05-12:
    * version 0.7.7
    * Fix QuickPost with "go back to same page" option
    * Fix board-specific signatures

2010-05-09:
    * version 0.7.6
    * Update GFPastel 2010
    * Fix last post and pagination links
    * Fix tagging and tracking features
    * Fix topic closing and post and topic deletion
    * Fix quoting and highlighting of mods and admins
    * Fix message link icons CSS
    * Fix board links on the tracked topics page

2010-05-05:
    * version 0.7.5
    * Replace SpotFAQs with a smaller CSS that complements the SpotFAQs skin
      on GameFAQs (SpotFAQs extras)
    * Link post number in quote headers to the quoted post
    * New CSS: GFPastel 2010