@@ -6,6 +6,8 @@
     * Fix problems with topic pagination, last post links and message numbering
     * Fix double headers appearing on the poll of the day
     * Add option to disable scrolling to QuickPost after quoting
+    * The options window no longer blocks focus to the Firefox window on
+      Windows
 
 2010-09-01:
     * version 0.7.8
